--- a/css/styles.css
+++ b/css/styles.css
@@ -1,20 +1,33 @@
-/* header { */
-/*   background-color: #21130d; */
-/* } */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+header {
+  background-image: linear-gradient(#fff0e3, #FFFFFF);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  font-size: 17px;
+}
 
 .container {
   display: flex;
-  justify-content: space-between; 
+  justify-content: space-between;
   align-items: center;
+  width: 100%; 
+  max-width: 1200px;
+  margin: 0 auto; 
 }
 
 .logo {
-  text-decoration: none;
-  outline: none;
-  color: #979cc2;
   font-size: 24px;
-  font-family: "Advent Pro", sans-serif;
+  color: #3d4787;
+  font-family: "Advent Pro" sans-serif;
   font-weight: 700;
+  text-decoration: none;
 }
 
 .nav {
@@ -22,18 +35,99 @@
   display: flex;
 }
 
-.item .link {
-  color: #5a8aee;
-  text-decoration: none;
-  outline: none;
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: 700;
-}
-
 .nav .item {
-  margin-left: 15px;
+  margin-left: 20px;
 }
 
 .nav .item:first-child {
-  margin-left: 0; 
+  margin-left: 0;
+}
+
+.link {
+  color: #3d4787;
+  text-decoration: none;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 700;
+}
+body, h1, h2, h3, p, ul {
+  margin: 0;
+  padding: 0;
+}
+
+nav ul {
+  list-style-type: none;
+}
+
+nav ul li {
+  display: inline;
+  margin-right: 20px;
+}
+
+nav ul li a {
+  text-decoration: none;
+}
+
+/* End of Header */
+
+main {
+  padding: 20px;
+}
+
+.content-home {
+  position: relative;
+  display: flex;
+  align-items: center;
+  background: size 700px;
+  background-position: center;
+  background-color: #CCCCFF;
+}
+
+.content-home .content-wrapper {
+  display: flex;
+  align-items: center;
+}
+
+.image-column {
+  flex: 1;
+  background-size: cover;
+  background-position: center;
+}
+
+.content-home h1 p {
+  width: 70%;
+  margin: 0 auto;
+}
+
+.content-about {
+  -webkit-flex: 3;
+  -ms-flex: 3;
+  flex: 3;
+  margin-bottom: 30px;
+}
+
+.content-portofolio {
+  -webkit-flex: 3;
+  -ms-flex: 3;
+  flex: 3;
+  margin-bottom: 30px;
+}
+
+.content-blog {
+  -webkit-flex: 3;
+  -ms-flex: 3;
+  flex: 3;
+  margin-bottom: 30px;
+}
+
+.content-contact {
+  -webkit-flex: 3;
+  -ms-flex: 3;
+  flex: 3;
+  margin-bottom: 30px;
+}
+
+.project {
+  background-color: #f9f9f9;
+  padding: 10px;
+  margin-bottom: 10px;
 }
