--- a/css/styles.css
+++ b/css/styles.css
@@ -1,133 +1,362 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@700&family=Poppins:wght@300;700&display=swap');
+
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
 
-header {
-  background-image: linear-gradient(#fff0e3, #FFFFFF);
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 20px;
-  font-size: 17px;
+body {
+  font-family: "Poppins", sans-serif;
 }
 
-.container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%; 
-  max-width: 1200px;
-  margin: 0 auto; 
+html {
+  scroll-behavior: smooth;
 }
+
+p {
+  color: grey;
+}
+
+/* Transition */
+
+a,
+.btn {
+  transition: all 300ms ease;
+}
+
+/* Navbar */
 
 .logo {
-  font-size: 24px;
-  color: #3d4787;
-  font-family: "Advent Pro" sans-serif;
-  font-weight: 700;
-  text-decoration: none;
+  font-size: 25px;
+  font-weight: 600;
 }
 
-.nav {
-  list-style: none;
+.logo:hover {
+  cursor: pointer default;
+}
+
+nav,
+.nav-links {
   display: flex;
 }
 
-.nav .item {
-  margin-left: 20px;
+nav {
+  justify-content: space-around;
+  align-items: center;
+  height: 17vh;
 }
 
-.nav .item:first-child {
-  margin-left: 0;
+.nav-links {
+  gap: 2rem;
+  list-style: none;
+  font-size: 1.5rem;
 }
 
-.link {
-  color: #3d4787;
+a {
+  color: black;
   text-decoration: none;
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: 700;
+  text-decoration-color: blue;
 }
-body, h1, h2, h3, p, ul {
+
+a:hover {
+  color: grey;
+}
+
+/* Hamburger menu */
+
+#hamburger-nav {
+  display: none;
+}
+
+.hamburger-menu {
+  position: relative;
+  display: inline-block;
+}
+
+.hamburger-icon {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 24px;
+  width: 30px;
+  cursor: pointer;
+}
+
+.hamburger-icon span {
+  width: 100%;
+  height: 2px;
+  background-color: black;
+  transition: all 0.3 ease-in-out;
+}
+
+.menu-links {
+  position: absolute;
+  top: 100%;
+  right: 0;
+  background-color: white;
+  width: fit-content;
+  max-height: 0;
+  overflow: hidden;
+  transition: all;
+}
+
+.menu-links a {
+  display: block;
+  padding: 10px;
+  text-align: center;
+  font-size: 1.5rem;
+  color: black;
+  text-decoration: none;
+  transition: all 0.3 ease-in-out;
+}
+
+.menu-links li {
+  list-style: none;
+}
+
+.menu-links.open {
+  max-height: 300px;
+}
+
+.hamburger-icon.open span:first-child {
+  transform: rotate(40deg) translate(10px, 5px);
+}
+.hamburger-icon.open span:nth-child(2) {
+  opacity: 0;
+}
+.hamburger-icon.open span:last-child {
+  transform: rotate(-45deg) translate(10px, -5px);
+}
+
+.hamburger-icon span:first-child {
+  transform: none;
+}
+.hamburger-icon span:first-child {
+  opacity: 1;
+}
+.hamburger-icon span:first-child {
+  transform: none;
+}
+
+/* SECTIONS */
+
+section {
+  padding-top: 4vh;
+  height: 96vh;
+  margin: 0 10rem;
+  box-sizing: border-box;
+  min-height: fit-content;
+}
+
+.section-container {
+  display: flex;
+}
+
+/* Profile */
+
+#profile {
+  display: flex;
+  justify-content: center;
+  gap: 5rem;
+  height: 80vh;
+}
+
+.section__pic-container {
+  display: flex;
+  height: 400px;
+  width: 400px;
+  margin: auto 0;
+}
+
+.section__text {
+  align-self: center;
+  text-align: center;
+}
+
+.section__text p {
+  font-weight: 600;
+}
+
+.section__text__p1 {
+  text-align: center;
+}
+
+.section__text__p2 {
+  font-size: 1.75rem;
+  margin-bottom: 1rem;
+}
+
+.title {
+  font-size: 3rem;
+  font-weight: bold;
+  text-align: center;
+}
+
+#socials-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 1rem;
+  gap: 1rem;
+}
+
+/* ICONS */
+.icon {
+  cursor: pointer;
+  height: 2rem;
+}
+
+/* BUTTONS */
+
+.btn-container {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.btn {
+  font-weight: 600;
+  transition: all 300ms ease;
+  padding: 1rem;
+  width: 8rem;
+  border-radius: 2rem;
+}
+
+.btn-color-1,
+.btn-color-2 {
+  border: rgb(53, 53, 53) 0.1rem solid;
+}
+
+.btn-color-1:hover,
+.btn-color-2:hover {
+  cursor: pointer;
+}
+
+.btn-color-1:hover,
+.btn-color-2:hover {
+  background: rgb(53, 53, 53);
+  color: white;
+}
+
+.btn-color-1 {
+  background: rgb(0, 0, 0);
+  color: white;
+}
+
+.btn-color-2 {
+  background: none;
+}
+
+.btn-color-2:hover {
+  border: rgb(255, 255, 255) 0.1rem solid;
+}
+
+.btn-container {
+  gap: 1rem;
+}
+
+/* ABOUT */
+
+#about {
+  position: relative;
+}
+
+.about-containers {
+  gap: 2rem;
+  margin-bottom: 2rem;
+  margin-top: 8rem;
+}
+
+.about-details-container {
+  justify-content: center;
+  flex-direction: column;
+}
+
+.box-container {
+  padding: 40px; 
+}
+
+.box-container {
+  border-radius: 1rem;
+  /* background-color: #EEF5FF; */
+
+}
+
+.box-container::before,
+.box-container::after {
   margin: 0;
   padding: 0;
+  outline: 0;
+  box-sizing: border-box;
+  border: 0;
+  -webkit-text-size-adjust: none;
+  text-rendering: optimizeLegibility;
 }
 
-nav ul {
-  list-style-type: none;
-}
-
-nav ul li {
-  display: inline;
-  margin-right: 20px;
-}
-
-nav ul li a {
-  text-decoration: none;
-}
-
-/* End of Header */
-
-main {
-  padding: 20px;
-}
-
-.content-home {
-  position: relative;
+.about-containers, 
+.about-details-container {
   display: flex;
-  align-items: center;
-  background: size 700px;
-  background-position: center;
-  background-color: #CCCCFF;
 }
 
-.content-home .content-wrapper {
-  display: flex;
-  align-items: center;
+.about-pic {
+  border-radius: 2rem;
+  transition: .3s ease-in;
 }
 
-.image-column {
+.about-pic:hover {
+  transition: .3s ease-out;
+}
+
+/* ARROW */
+.arrow {
+  position: absolute;
+  right: -5rem;
+  bottom: 2.5rem;
+}
+
+.details-container {
+  padding: 1.5rem;
   flex: 1;
-  background-size: cover;
-  background-position: center;
+  background: white;
+  border-radius: 2rem;
+  border: rgb(53, 53, 53) 0.1rem solid;
+  text-align: center;
+  transition: .3s ease-in;
 }
 
-.content-home h1 p {
-  width: 70%;
-  margin: 0 auto;
+.details-container:hover {
+  transition: .3s ease-out;
+  box-shadow: 5px 10px;
+  translate:  translateY(-10px);
 }
 
-.content-about {
-  -webkit-flex: 3;
-  -ms-flex: 3;
-  flex: 3;
-  margin-bottom: 30px;
+.section-container {
+  gap: 4rem;
+  height: 80%;
 }
 
-.content-portofolio {
-  -webkit-flex: 3;
-  -ms-flex: 3;
-  flex: 3;
-  margin-bottom: 30px;
+.section__pic-container {
+  height: 400px;
+  width: 400px;
+  margin: auto 0;
 }
 
-.content-blog {
-  -webkit-flex: 3;
-  -ms-flex: 3;
-  flex: 3;
-  margin-bottom: 30px;
+#experience {
+  position: relative;
 }
 
-.content-contact {
-  -webkit-flex: 3;
-  -ms-flex: 3;
-  flex: 3;
-  margin-bottom: 30px;
+.experience-sub-title {
+  color: rgb(85, 85, 85);
+  font-weight: 600;
+  font-size: 1.75rem;
+  margin-bottom: 2rem;
 }
 
-.project {
-  background-color: #f9f9f9;
-  padding: 10px;
-  margin-bottom: 10px;
+.experience-details-container {
+  /* display: flex; */
+  justify-content: space-around; 
+  flex-direction: column; 
+  padding: 0;
+  margin: 0;
+  /* flex-flow: row wrap; */
 }
