add responsive untuk dispaly 768px+

--- a/css/mediaqueries.css
+++ b/css/mediaqueries.css
@@ -47,13 +47,42 @@
   }
 }
 
+@media screen and (min-width: 1200px) {
+  #experience,
+  .experience-details-container {
+    margin-top: 2rem;
+  }
+  #profile,
+  .section-container {
+    display: block;
+  }
+  .arrow {
+    display: none;
+  }
+  section,
+  .section-container {
+    height: fit-content;
+  }
+  section {
+    margin: 0 5%;
+  }
+  .section__pic-container {
+    width: 275px;
+    height: 275px;
+    margin: 0 auto 2rem;
+  }
+  .about-containers {
+    margin-top: 0;
+  }
+}
+
 @media screen and (max-width: 600px) {
   #contact,
   footer {
     height: 40vh;
   }
   #profile {
-    height: 83vh;
+    height: 66vh;
     margin-bottom: 0;
   }
   article {
@@ -100,4 +129,4 @@
   .text-container {
     text-align: justify;
   }
-}
+}ytfzf 
